--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Binding of Isaac</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="mainHeader">
@@ -12,18 +15,21 @@
         <nav><ul>
             <li><a href="./index.html">TBoI</a></li>
             <li><a href="./characters.html">Postavy</a></li>
+            <li><a href="./bosses.html">Bossové</a></li>
         </ul></nav>
     </header>
 
     <main>
         <article>
-            <header><h2>Sofistikovaný nadpis</h2></header>
-
-            <p></p>
+            <header><h2>O čem to je?</h2></header>
+            <p>The Binding of Isaac je hra originálně vytvořena na Adobe Flash vývojářem jménem Edmund McMillen.
+               Žánrově je TBoI roguelike dungeon-crawler, což vlastně znamená, že každý pokus je náhodně generovaný a rozděluje se na různá poschodí dungeonu.
+               Při hře hráč sbírá různé pasivní a aktivní itemy; pasivní itemy mají permanentní efekty jako třeba zvýšení statů; aktivní itemy jdou používat vícekrát, ale po použití se musí dobít, než jdou použít znovu.  </p>
+        
         </article>
 
     </main>
 
-
+    <footer>Hynek Vaner 2024</footer>
 </body>
 </html>
