--- a/characters.html
+++ b/characters.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <header class="mainHeader">
+    <header >
         <h1>Postavy</h1>
         <nav><ul>
             <li><a href="./index.html">TBoI</a></li>
