--- a/bosses.html
+++ b/bosses.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="mainHeader">
+    <header >
         <h1>Bossové</h1>
         <nav><ul>
             <li><a href="./index.html">TBoI</a></li>
@@ -22,7 +22,7 @@
     <main>
         <article>
             <header><h2>Finální Bossové</h2></header>
-            <p></p>
+            <img src="./imgs/compMarks.webp" alt="postItNote">
 
             <article>
                 <header><h3>Mom's Heart</h3></header>
