--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="mainHeader">
+    <header >
         <h1>The Binding of Isaac</h1>
         <nav><ul>
             <li><a href="./index.html">TBoI</a></li>
