--- a/bosses.html
+++ b/bosses.html
@@ -20,71 +20,27 @@
     </header>
 
     <main>
-        <article>
+        <section>
             <header><h2>Finální Bossové</h2></header>
             <img src="./imgs/compMarks.webp" alt="postItNote">
-
             <article>
-                <header><h3>Mom's Heart</h3></header>
-                <p></p>
-            </article>
+                <ul>
+                    <li>Mom's Heart</li>
+                    <li>Isaac</li>
+                    <li>???</li>
+                    <li>Satan</li>
+                    <li>The Lamb</li>
+                    <li>Mega Satan</li>
+                    <li>Boss Rush</li>
+                    <li>Hush</li>
+                    <li>Mother</li>
+                    <li>The Beast</li>
+                    <li>Delirium</li>
+                    <li>Ultra Greed</li>
 
-            <article>
-                <header><h3>Isaac</h3></header>
-                <p></p>
+                </ul>
             </article>
-
-            <article>
-                <header><h3>???</h3></header>
-                <p></p>
-            </article>
-
-            <article>
-                <header><h3>Satan</h3></header>
-                <p></p>
-            </article>
-
-            <article>
-                <header><h3>The Lamb</h3></header>
-                <p></p>
-            </article>
-
-            <article>
-                <header><h3>Mega Satan</h3></header>
-                <p></p>
-            </article>
-
-            <article>
-                <header><h3>Boss Rush</h3></header>
-                <p></p>
-            </article>
-
-            <article>
-                <header><h3>Hush</h3></header>
-                <p></p>
-            </article>
-
-            <article>
-                <header><h3>Mother</h3></header>
-                <p></p>
-            </article>
-
-            <article>
-                <header><h3>The Beast</h3></header>
-                <p></p>
-            </article>
-
-            <article>
-                <header><h3>Delirium</h3></header>
-                <p></p>
-            </article>
-
-            <article>
-                <header><h3>Ultra Greed(ier)</h3></header>
-                <p></p>
-            </article>
-
-        </article>
+        </section>
 
     </main>
     <footer>Hynek Vaner 2024</footer>
