hmmm yes "commit changes" indeed

--- a/bosses.html
+++ b/bosses.html
@@ -43,6 +43,6 @@
         </section>
 
     </main>
-    <footer>Hynek Vaner 2024</footer>
+    <div class="footer">Hynek Vaner 2024</div>
 </body>
 </html>
