--- a/characters.html
+++ b/characters.html
@@ -22,6 +22,9 @@
 
     <main>
         <article>
+            <img src="./imgs/charcters.jpg" alt="characters"
+        </article>
+        <article>
             <header><h2>Normální Postavy</h2></header>
             <ul>
                 <li>Isaac</li>
@@ -46,28 +49,29 @@
 
         <article>
             <header><h2>Tainted Postavy</h2></header>
-            <li>T. Isaac</li>
-            <li>T. Judas</li>
-            <li>T. Cain</li>
-            <li>T. Azazel</li>
-            <li>T. ???</li>
-            <li>T. Keeper</li>
-            <li>T. Lost</li>
-            <li>T. Forgotten</li>
-            <li>T. Eve</li>
-            <li>T. Eden</li>
-            <li>T. Jacob</li>
-            <li>T. Maggie</li>
-            <li>T. Apollyon</li>
-            <li>T. Bethany</li>
-            <li>T. Lilith</li>
-            <li>T. Lazarus</li>
-            <li>T. Samson</li>
-
+            <ul>
+                <li>T. Isaac</li>
+                <li>T. Judas</li>
+                <li>T. Cain</li>
+                <li>T. Azazel</li>
+                <li>T. ???</li>
+                <li>T. Keeper</li>
+                <li>T. Lost</li>
+                <li>T. Forgotten</li>
+                <li>T. Eve</li>
+                <li>T. Eden</li>
+                <li>T. Jacob</li>
+                <li>T. Maggie</li>
+                <li>T. Apollyon</li>
+                <li>T. Bethany</li>
+                <li>T. Lilith</li>
+                <li>T. Lazarus</li>
+                <li>T. Samson</li>
+            </ul>
         </article>
         
     </main>
 
-    <footer>Hynek Vaner 2024</footer>
+    <div class="footer">Hynek Vaner 2024</div>
 </body>
 </html>
