--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
     <main>
         <article>
             <header><h2>O čem to je?</h2></header>
-            <p>The Binding of Isaac je hra originálně vytvořena na Adobe Flash vývojářem jménem Edmund McMillen.
-               Žánrově je TBoI roguelike dungeon-crawler, což vlastně znamená, že každý pokus je náhodně generovaný a rozděluje se na různá poschodí dungeonu.
-               Při hře hráč sbírá různé pasivní a aktivní itemy; pasivní itemy mají permanentní efekty jako třeba zvýšení statů; aktivní itemy jdou používat vícekrát, ale po použití se musí dobít, než jdou použít znovu.  </p>
+            <p>    The Binding of Isaac je hra originálně vytvořena na Adobe Flash vývojářem jménem Edmund McMillen.
+               Žánrově je TBoI Single-player roguelike dungeon-crawler, což vlastně znamená, že každý pokus je náhodně generovaný a rozděluje se na různá poschodí dungeonu.
+               Při hře hráč sbírá itemy, pick-upy a consumably, které mu pomáhají porazit nepřátele.
+            <br><br>
+                Hráč může unlockovat nové itemy porážením final bossů. Každá postava má minimálně 12 unlocků, jeden za každého bosse. Ve hře je celkem 34 postav, 17 normálních a 17 Tainted postav, které jsou alternativní verze normálních postav a mají nové unikátní mechaniky.</p>
         
         </article>
 
     </main>
 
-    <footer>Hynek Vaner 2024</footer>
+    <div class="footer">Hynek Vaner 2024</div>
 </body>
 </html>
