--- a/characters.html
+++ b/characters.html
@@ -22,7 +22,7 @@
 
     <main>
         <article>
-            <img src="./imgs/charcters.jpg" alt="characters"
+            <img width="230" height="300" src="./imgs/charcters.jpg" alt="characters">
         </article>
         <article>
             <header><h2>Normální Postavy</h2></header>
